##Text encoding: utf-8

2007-03-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: updated to new architecture.
	* configure.ac: ditto.
	* docs/reference/Doxyfile.in: ditto.
	* libs/Makefile.am: new file.
	* programs/3d/Makefile.am: updated to new architecture.
	* programs/calc/Makefile.am: ditto.
	* programs/crystal/Makefile.am: ditto.
	* programs/table/Makefile.am: ditto.

2007-03-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/*: moved to libs/gcu.
	* libs/gcu/*: moved from gcu.

2007-03-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* programs/3d/window.cc: updated copyright in about box.
	* programs/calc/gchemcalc.cc: ditto.
	* programs/crystal/window.cc: ditto.
	* programs/table/gchemtable-app.cc: ditto.

2007-02-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/crystal/C/gcrystal-unstable.xml: updated history.
	* programs/3d/main.cc: calls gtk_gl_init.
	* programs/crystal/main.cc: ditto.

2007-02-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post branching version bump (0.9.0).

2007-02-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/crystal/C/gcrystal-unstable.xml: make it
	conform to the schema.
	* docs/help/table/C/gchemtable-unstable.xml: ditto.

2007-02-21  Jean Bréfort  <jean.brefort@normalesup.org>
	* docs/help/table/C/figures/curve.png: new screenshot.
	* docs/help/table/C/figures/elec.png: ditto.
	* docs/help/table/C/figures/family.png: ditto.
	* docs/help/table/C/figures/main.png: ditto.
	* docs/help/table/C/figures/radii.png: ditto.
	* docs/help/table/C/figures/start.png: ditto.
	* docs/help/table/C/figures/state.png: ditto.
	* docs/help/table/C/figures/thermo.png: ditto.
	* docs/help/table/C/gchemtable-unstable.xml: written.
	* gcu/gtkchem3dviewer.cc: copyright update.
	* glade/table/eltpage.glade: minor UI enhancement.
	* programs/table/gchemtable-elt.cc: ditto.

2007-02-18  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/gtkchem3dviewer.cc: use a pointer to Chem3dDoc to ensure