@@ -18,5 +18,5 @@ libmozgcu_la_LDFLAGS = -module -avoid-version
 libmozgcu_la_LIBADD = $(MOZILLA_LIBS)
 
 chem_viewer_SOURCES = chem-viewer.cc
-chem_viewer_LDADD = $(top_builddir)/gcu/libgcu-unstable.la @GCU_LIBS@
-INCLUDES = -I$(top_srcdir) @GCU_CFLAGS@
+chem_viewer_LDADD = $(top_builddir)/libs/gcu/libgcu-unstable.la @GCU_LIBS@
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/libs @GCU_CFLAGS@
